k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: niitsyllabriq-frontend
  namespace: niitsyllabriq
spec:
  selector:
    app: niitsyllabriq-frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
