k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: niitsyllabriq
  namespace: niitsyllabriq
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: __APP_HOST__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: niitsyllabriq-frontend
                port:
                  number: 8080
    - host: __API_HOST__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: niitsyllabriq-api
                port:
                  number: 8000
